# isQ-Compiler

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Cargo.nix  Cargo.toml  Dockerfile  LICENSE  Makefile  READMD.md  README.en.md  README.md  default.nix  flake.nix  lib  rust-toolchain  shell-codium.nix  shell.nix  version.json
isqc/: .gitignore  Cargo.toml  default.nix  flake.nix  rust-toolchain
isqc/src/: error.rs  exec.rs  frontend.rs  main.rs  mlir.rs
isqc/tests/: array.rs  aseert.rs  classic.rs  cli.rs  distributed.rs  import.rs  integration.rs  oracle.rs  qcis.rs  quantum.rs  scf.rs  syntax.rs  util.rs
isqc/tests/input/: classic_add_sub.isq  classic_bitwise_logic.isq  classic_bool_to_int.isq  classic_divide0.isq  classic_empty_statement.isq  classic_equal.isq  classic_if.isq  classic_local.isq  classic_neg.isq  classic_nested_comment.isq  classic_shift.isq  classic_unitary.isq  derive.isq  extreme_long_code.isq  extreme_long_code_reset.isq  extreme_long_name.isq  extreme_many_procs.isq  matrix_array.isq  matrix_ccnot.isq  matrix_complex.isq  matrix_decimal.isq  measure_twice.isq  reset_twice.isq  runtime_out_of_range.isq  runtime_same_qubit.isq  scf_break.isq  scf_continue.isq  scf_continue_for.isq  scf_else_if.isq  scf_empty_block.isq  scf_for_if.isq  scf_if.isq  scf_if_break_block.isq  scf_if_break_for.isq  scf_if_no_else.isq  syntax_empty_gate.isq  syntax_type_mismatch.isq  syntax_unknown_token.isq  syntax_wrong_brackets.isq  syntax_wrong_break.isq  (+6 more)
mlir/: .clang-format  .clangd  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  default.nix  flake.nix  main.cpp
mlir/cmake/: UseGold.cmake
mlir/docs/: CMakeLists.txt  Doxyfile.in  footer.html  stylesheet.css
mlir/frontends/isq/: CMakeLists.txt  mlirgen.cpp
mlir/include/: CMakeLists.txt
mlir/include/fmt/: core.h  format-inl.h  format.h
mlir/include/isq/: Backends.h  CMakeLists.txt  Dialect.h  Enums.h  GateDefTypes.h  IR.h  Lower.h  Math.h  OpVerifier.h  Operations.h  ParsePrint.h  QAttrs.h  QStructs.h  QSynthesis.h  QTypes.h  qsyn.h
mlir/include/kitty/: affine.hpp  cnf.hpp  decomposition.hpp  enumeration.hpp  esop.hpp  implicant.hpp  isop.hpp  kitty.hpp  npn.hpp  permutation.hpp  print.hpp  properties.hpp  spectral.hpp
mlir/include/logic/: Dialect.h  IR.h  Operations.h
mlir/include/tblgen/: CMakeLists.txt  IR.td
mlir/lib/: CMakeLists.txt  format.cpp
mlir/lib/analysis/: ISQBuilder.cpp  QStateTrace.cpp
mlir/lib/attr/: ComplexF64.cpp  GateDefinition.cpp
mlir/lib/backends/: GenEQASM.cpp  GenOpenQASM3.cpp  GenQCIS.cpp
mlir/lib/extra/: ExtraDialect.cpp
mlir/lib/lowering/: LowerToLLVM.cpp  allocLower.cpp  allocaLower.cpp  applyLower.cpp  callqopLower.cpp  deallocLower.cpp  decorateLower.cpp  defgateLower.cpp  globalLower.cpp  moduleLower.cpp  passLower.cpp  printLower.cpp  quantumFunc.cpp  storeLower.cpp  useLower.cpp
mlir/lib/misc/: Decomposition.cpp  Dialect.cpp  LogicDialect.cpp  Math.cpp  QIRExternQuantunFunc.cpp  ToolsInit.cpp
mlir/lib/operation/: ApplyGateOp.cpp  ApplyRotateGateOp.cpp  CallQOpOp.cpp  DeclareQOpOp.cpp  DecorateOp.cpp  DefgateOp.cpp  DowngradeGateOp.cpp  UseGateOp.cpp
mlir/lib/oracle/: QM.cpp  graph.cpp
mlir/lib/passes/: AddThreadLocalToGlobal.cpp  CancelRedundant.cpp  ConvertFamousParamSQIntoU3.cpp  ConvertToQCISSet.cpp  DecomposeCtrlSQ.cpp  DecomposeMatrix.cpp  DecorateFolding.cpp  EliminateHermitianPairs.cpp  EliminateNegCtrl.cpp  ExpandDecomposition.cpp  FoldAffineComparison.cpp  FoldSubViewOpsAffine.cpp  GateDecomposer.cpp  ISQCanonicalizer.cpp  LegalizeGenOpenQASM3.cpp  LegalizeTraits.cpp  Logic2ISQ.cpp  LowerSwitchOp.cpp  LowerToQCIS.cpp  LowerToQIR.cpp  Mem2Reg.cpp  MemrefAffineDialectConversion.cpp  OracleDecompose.cpp  PureGateDetect.cpp  QIR2LLVM.cpp  QuantumGatePass.cpp  RecognizeFamousGates.cpp  RecognizeFamousTraits.cpp  RemoveGPhase.cpp  RemoveQStateTempStore.cpp  RemoveReset.cpp  RemoveTrivialSQGates.cpp  ReuseMeasuredQubit.cpp  SWPipelinePasses.cpp  ScalarizeSingletonArray.cpp  StatePreparation.cpp  TargetQCISSet.cpp
mlir/lib/qsyn/: qsyn_csd.cpp  qsyn_universal.cpp
mlir/lib/synthesis/: CSD.cpp  MultiControlDecompose.cpp  QSynthesis.cpp  mcdecompose.cpp
mlir/lib/type/: Gates.cpp  ParsePrint.cpp  QIRTypes.cpp  QState.cpp
mlir/scripts/: fix_dialect_doc.py
mlir/src/: main.cpp
mlir/src/misc/: Dialect.cpp  Tblgen.cpp
mlir/src/operation/: ApplyGateOp.cpp  ApplyOp.cpp  CallQOpOp.cpp  DeclareOp.cpp  DeclareQOpOp.cpp  DefgateOp.cpp  DowngradeGateOp.cpp  GateOp.cpp  UseGateOp.cpp
mlir/src/passes/: EliminateHermitianPairs.cpp
mlir/src/type/: Gates.cpp  ParsePrint.cpp  QState.cpp  QuantumOps.cpp
mlir/tests/: affine-scope-test.mlir  bell.mlir  bug_fold_cnot_into_cx.mlir  builtin.mlir  canonicalize_apply.mlir  canonicalize_downgrade.mlir  cch.mlir  ccrx.mlir  coin.mlir  controlled_gphase.mlir  decompose_gphase.mlir  decorate_elimination.mlir  decorate_twice.mlir  decorated_matrix.mlir  doubly_affine.mlir  execute_region.mlir  extern_test.mlir  for_loop_raii.mlir  full_test.mlir  full_test2.mlir  full_test_canonicalized.mlir  gatearray.mlir  global_phase.mlir  grover_3.mlir  inline_test.mlir  llvm.mlir  lower_to_qir.mlir  raii.mlir  random_walk.mlir  recursive_selinger.isq  recursive_selinger_simp.isq  rewrite.mlir  test.mlir  test1.mlir  test1_half.mlir  test1_new.mlir  test1_new_2.mlir  test2.mlir  test2_onedef.mlir  u3.mlir  (+1 more)
mlir/tests/errors/: bad-gatedef-func-type.mlir  bad_indexing.mlir  double-use.mlir
mlir/tests/isqc/: input.txt  test2.isq
mlir/tests/qir/: out.ll  out2.ll
mlir/tools/: CMakeLists.txt  codegen.cpp  example.cpp  lower.cpp  lsp-server.cpp  ok.cpp  opt.cpp
simulator/: .gitignore  Cargo.toml  build.rs  default.nix  flake.nix  rust-toolchain
simulator/codegen/: Cargo.toml
simulator/codegen/src/: gen-qir-shim.rs
simulator/cuda-plugin/: Makefile  default.nix  qsim_kernel.cu
simulator/examples/bell/: Makefile  bell.c  bell.ll
simulator/examples/sanity/: Makefile  (+3 more)
simulator/scripts/: gen-qir-shim
simulator/share/: isq-simulator.bc
simulator/src/: lib.rs  qdevice.rs
(+671 files in other folders)
