[package]
name = "isqc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
miette = { version = "4.2.1", features = ["fancy"] }
clap = { version = "3.1.5", features = ["derive", "cargo", "env", "unicode"] }
thiserror = "1.0.30"
tempfile = "3.3.0"