[package]
name = "isq-simulator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gen-qir-shim"
path = "src/bin/gen-qir-shim.rs"


[dependencies]
num-complex = "0.4.0"
log = "0.4.14"
rand = "0.8.4"
num-bigint = "0.4.3"
itertools = "0.10.3"

[dev-dependencies]
env_logger = "0.9.0"