[package]
name = "isq-simulator"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs"

[dependencies]
num-complex = "0.4.0"
log = "0.4.14"
rand = "0.8.4"
num-bigint = "0.4.3"
itertools = "0.10.3"
libloading = "0.7.2"
clap = { version = "3.0.0-rc.9", features = ["derive"] }
env_logger = "0.9.0"
chrono = "0.4.19"
regex = "1.5.4"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] , optional = true}
serde = { version = "1.0.115", features = ["derive"] }
[dev-dependencies]

[features]
default = ["qcis"]
none = []
cuda = []
qcis = ["serde_json"]

